# [[id:6efd027d-a9d3-420d-bb38-54be994637ae][ChangeLog:1]]
2021-01-12  Marco Wahl  <marcowahlsoft@gmail.com>

	* fit-text-scale.org (Usage): better wording.

2020-07-02  Marco Wahl  <marcowahlsoft@gmail.com>

	* (1.1.4) release.
	* fit-text-scale-max-font-size-fit-line-up-to-cursor: new convenience command.

2020-06-24  Marco Wahl  <marcowahlsoft@gmail.com>

	* fit-text-scale.org: some cleanup.

2020-02-17 Marco Wahl  <marcowahlsoft@gmail.com>

	(1.1.3) Minor tweaks to meet the standards of MELPA.

2020-02-16 Marco Wahl  <marcowahlsoft@gmail.com>

	(1.1.1) Invisible text should not add to line length.  Invisible
	text occurs e.g. with Org links.
	(1.1.0) Prepare for MELPA proposition.  Done bytecompile, checkdoc
	package-lint.
# ChangeLog:1 ends here