@@ -12,7 +12,7 @@
 ;; Keywords: convenience
 ;; URL: https://gitlab.com/marcowahl/fit-text-scale
 
-;; Copyright (C) 2017-2020 Marco Wahl
+;; Copyright (C) 2017-2021 Marco Wahl
 ;; 
 ;; This program is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
@@ -59,31 +59,44 @@
 ;;    (cond
 ;;     ((equal arg '(4)) (fit-text-scale-max-font-size-fit-line))
 ;;     ((equal arg '(16)) (fit-text-scale-max-font-size-fit-line-up-to-cursor))
+;;     ((and (region-active-p) (< (region-beginning) (region-end)))
+;;      (save-restriction
+;;        (narrow-to-region (region-beginning) (region-end))
+;;        (fit-text-scale-max-font-size-fit-lines)))
 ;;     (t (fit-text-scale-max-font-size-fit-lines)))))
 ;; 
 ;; (global-set-key
 ;;  (kbd "C-x C-*")
-;;    #'fit-text-scale-max-font-size-fit-buffer)
+;;  (lambda (&optional arg)
+;;    (interactive "P")
+;;    (if (and (region-active-p) (< (region-beginning) (region-end)))
+;;        (save-restriction
+;;          (narrow-to-region (region-beginning) (region-end))
+;;          (fit-text-scale-max-font-size-fit-buffer))
+;;      (fit-text-scale-max-font-size-fit-buffer))))
 ;; #+end_src
 ;; 
 ;; With these settings there is
 ;; 
-;; - ~C-x C-&~
-;;   - Choose maximal text scale so that the longest line visible still
-;;     fits in current window.
 ;; - ~C-u C-x C-&~
 ;;   - Choose maximal text scale so that the current line still
 ;;     fits in the window.
 ;; - ~C-u C-u C-x C-&~
 ;;   - Choose maximal text scale so that the current line up to the cursor
 ;;     still fits in the window. This can be useful with visual-line-mode.
+;; - ~C-x C-&~
+;;   - Choose maximal text scale so that the longest line visible still
+;;     fits in current window.
+;;   - If region is active then only consider lines in the region.
 ;; - ~C-x C-*
 ;;   - Choose maximal text scale so that the vertical buffer content
 ;;     still fits into current window.
-;; - ~C-x C-0~ (Already given.  This is good old ~text-scale-adjust~.)
+;;   - If region is active then only consider lines in the region.
+;; - ~C-x C-0~ (Already given with standard Emacs.  This is good old
+;;   ~text-scale-adjust~.)
 ;;   - Switch back to the default size when control about the sizes has
 ;;     been lost.
-;; - ~C-x C-+~ + - and ~C-x C--~ - + for fine tuning.  (Also given.)
+;; - Use e.g. ~C-x C-+ ====~ + - and ~C-x C-- -----~ - + for fine tuning.  (Also given.)
 ;; - ~C-g C-g C-g~... (hit the keyboard hard!) if something, hrm, hangs.
 
 ;; There are some parameters to fine tune the functionality.  Check it out with
